# combinatorial_patterns

./: Cargo.toml  README.md
src/: latin_square.rs  lib.rs
